test/should_pass/tuple_union.erl
-module(tuple_union).

-export([f/0]).

-spec f() -> {integer()} | {boolean()}.
f() ->
    {true}.
