test/should_fail/nil.erl
-module(nil).
-export([f/0]).

-spec f() -> nonempty_list().
f() -> [].
